--- a/style.css
+++ b/style.css
@@ -6,4 +6,27 @@
     display: table;
     margin-left: auto;
     margin-right: auto;
+    width: 800px;
+    background-color: rgb(70, 162, 70);
+}
+
+.avatar {
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+}
+
+.footer {
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.img-rsschool {
+  box-sizing: border-box;
+  width: 80px;
+  height: 30px;
 }
